# graphrag-news-lab

./: .env.example  .gitignore  CODEBASE.md  README.md  app.py  common.py  pyproject.toml  settings.yaml
baseline/: plain_rag.py
eval/: run_eval.py
graphrag_app/: query.py
harness/: ab.py
ingest/: subset.py
scripts/: download_data.sh  run_app.sh  run_index.sh
viz/: show_community.py
